--- a/frontend/edubridge/pubspec.yaml
+++ b/frontend/edubridge/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   dio: ^5.8.0+1  
   flutter_secure_storage: ^8.0.0
   intl: ^0.17.0
+  image_picker: ^0.8.7
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
